# todo

./: README.md  docker-compose.yml  package.json
.github/: workflow.yml
.github/workflows/: main.yml
backend/: .gitignore  Dockerfile-dev  README.md  pyproject.toml
backend/app/: db.py  main.py
backend/app/resources/: list.py  task.py
backend/app/schemas/: list.py  task.py
backend/app/utils/: decorators.py
backend/resources/: list.py  task.py
backend/schemas/: task.py
backend/tests/: conftest.py  test_list.py
backend/tests/resources/: test_list.py  test_task.py
client/: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.eslint.json  tsconfig.json  vite.config.ts
client/cdk/: cdk-outputs.json  deploy.sh  package-lock.json  sync-app.sh
client/cdk/lib/: cdk-stack.ts
client/cdk/lib/graphql/: schema.graphql
client/cdk/lib/lambda/: index.js  package-lock.json  package.json
client/src/: App.tsx  AppProvider.tsx  apiUtils.ts  context.ts  main.tsx  types.ts  utils.ts
client/src/components/: App.tsx
client/src/components/InputError/: index.tsx
client/src/components/List/: index.tsx
client/src/components/Task/: index.tsx
client/src/components/TaskInput/: index.tsx
client/src/components/TaskList/: index.tsx
client/src/types/: index.ts
client/tests/: App.test.tsx  List.test.tsx  MockProvider.tsx  Task.test.tsx  TaskInput.test.tsx  TaskList.test.tsx  context.test.tsx  setup.js
frontend/: .badge-config  .eslintrc.cjs  Dockerfile-dev  README.md  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
frontend/src/: AppProvider.tsx  context.ts  main.tsx  types.ts
frontend/src/components/: App.tsx
frontend/src/components/InputError/: index.tsx
frontend/src/components/Task/: index.tsx
frontend/src/components/TaskInput/: index.tsx
frontend/src/components/TaskList/: index.tsx
frontend/src/utils/: index.ts
frontend/tests/: App.test.tsx  AppProvider.test.tsx  MockProvider.tsx  Task.test.tsx  TaskList.test.tsx  setup.ts
server/: Dockerfile  Dockerfile-dev  pyproject.toml
server/app/: app.py  types.py
server/server/: wsgi.py
server/todo-server/: README.md  pyproject.toml
