[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jack Reichert <awesome@jackreichert.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^24.4.2"
pytest = "^8.1.1"
flask = "^3.0.3"
flask-smorest = "^0.44.0"
gunicorn = "^22.0.0"
flask-cors = "^4.0.1"
marshmallow = "^3.21.1"
pytest-cov = "^5.0.0"
coverage-badge = "^1.1.1"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
