[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jack Reichert <awesome@jackreichert.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
pytest = "^7.4.0"
flask = "^2.3.2"
gunicorn = "^20.1.0"
flask-cors = "^4.0.0"
ariadne = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
